src/objects/Kizuna_Activity__c.object
<CustomObject>
    <fields>
        <fullName>FeedItemId__c</fullName>
        <label>Feed Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoId__c</fullName>
        <label>Photo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoPreview__c</fullName>
        <formula>IF(ISBLANK(PhotoUrl__c), &apos;&apos;,
  IMAGE(PhotoUrl__c, &apos;photo&apos;))</formula>
        <label>Photo Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <formula>if(ISBLANK(PhotoId__c), &apos;&apos;,
  &apos;/sfc/servlet.shepherd/version/download/&apos; + PhotoId__c + &apos;?asPdf=false&apos;)</formula>
        <label>Photo Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <label>Volunteer</label>
        <referenceTo>Kizuna_Volunteer__c</referenceTo>
        <relationshipLabel>Activity</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lat__c</fullName>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lng__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Activity</label>
    <nameField>
        <displayFormat>AC{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>